Fix overflow on left side of header

--- a/src/styles/headerStyle.scss
+++ b/src/styles/headerStyle.scss
@@ -16,7 +16,7 @@
     cursor: pointer;
   }
 
-  & button, & div {
+  & button, & div , & a{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -28,6 +28,9 @@
     background-color: inherit;
     border-radius: 0.2rem;
     padding: 3px 8px 3px 8px;
+    h1{
+      text-align: left;
+    }
     &:hover:not(#x-circle){
       outline: 1px solid lightgray;
     }
